<resources>
    <string name="app_name">My Application</string>
    <string name="speech_recognition_btn">Speech recognition</string>
    <string name="google_api_cloud_btn">Google Api</string>
    <string name="deep_speech_btn">Deep speech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_record">Start record</string>
    <string name="text">text</string>
    <string name="stop_record">Stop record</string>
</resources>